--- a/messages.conf
+++ b/messages.conf
@@ -74,11 +74,11 @@ args {
         noservice="&cПлагин на права не установлен."
     }
     playerconsole {
-        noexist="&cThat player does not exist. Use \"-\" for the console."
-        nouser="&cThe user {0} does not exist. Use \"-\" for the console."
+        noexist="&cЭтот игрок не существует. Используйте \"-\" для консоли."
+        nouser="&cПользователь {0} не существует. Используйте \"-\" для консоли."
     }
     positiveint {
-        negative="&cThe argument must be a positive number."
+        negative="&cАргумент должен быть положительным числом."
         zero="&cThe argument cannot be zero."
     }
     selector {
