--- a/messages.conf
+++ b/messages.conf
@@ -2932,7 +2932,7 @@ world {
     }
 }
 worldrepair {
-    detected="&cОБНАРУЖЕНО ИЗМЕНЕНИЕ UUID'а МИРА. Следующие миры изменили UUID:"
+    detected="&cОБНАРУЖЕНО ИЗМЕНЕНИЕ UUID МИРА. Следующие миры изменили UUID:"
     repair {
         fail="&cНевозможно восстановить &e{0}"
         nouuid="&cНе удалось найти мир с UUID {0} - он кажется, исчез..."
